# MyLake_v2_Vansjo

./: .gitignore  .gitmodules  MyLake_Vansjo_run.m  MyLake_Vansjo_run_Fe_climate_2030_2049_scenarios.m  MyLake_Vansjo_run_Fe_scenarios.m  MyLake_Vansjo_run_P_scenarios.m  MyLake_Vansjo_run_T_scenarios.m  MyLake_Vansjo_run_scenarios.m  MyLake_Vansjo_run_thermocline.m  MyLake_mcmc_run.m  MyLake_response_surface_input_gen.m  MyLake_response_surface_run.m  MyLake_setPriors_for_MCMC.m  MyLake_single_run.m  MyLake_single_run_Chl_in_TP.m  README.md  Vansjo.sublime-workspace  calibration_routine.m  calibration_routine_O.m  calibration_routine_O_P.m  calibration_routine_O_P_Chl.m  calibration_routine_O_P_Chl_in_TP.m  calibration_routine_O_P_Chl_sed.m  calibration_routine_O_P_Сhl_TP.m  calibration_routine_P.m  calibration_routine_T.m  calibration_routine_chl.m  calibration_routine_sed.m  calibration_routine_solo_sed.m  fn_MyL_application.m  load_params.m  merge_l_b_inputs.m  opt_fun.m
INCA_to_MyLake/: INCA and MyLake coupling.docx  fn_INCA_MyL.m  fn_INCA_generate_filenames.m  fn_INCA_reach_combination.m  readme.txt
IO/: .gitignore  mylake_initial_concentrations.txt  mylake_initial_concentrations_2.txt  sediment_initial_concentrations 20Feb.txt  sediment_initial_concentrations 26Feb.txt  sediment_initial_concentrations SS.txt  store_INCAP_input.mat  (+26 more)
Sediments/ph-module/: .gitignore  CMakeLists.txt  README.md  Readme.txt  alpha.m  build_pH.m  pH.cpp  pH_phreeqc.cpp  pH_phreeqc.mexmaci64  pH_phreeqc_EQ.cpp  pH_phreeqc_std.cpp  sediment_data_analysis.m  test.m  test_phreeqc.m
(+339 files in other folders)
